.provarCaches/00D410000011HE0EAM/objects/rstk__socustmsach__c.object
<CustomObject>
    <description>socustmsach__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socustmsach_socustmsac__r.rstk__externalid__c &amp;&apos;_&apos;&amp; TEXT(rstk__socustmsach_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socustmsach_socustmsac__r.Name &amp;&apos;-&apos;&amp; TEXT(rstk__socustmsach_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsach_clause__c</fullName>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsach_comment__c</fullName>
        <label>Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsach_date__c</fullName>
        <label>Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsach_msarev__c</fullName>
        <label>MSA Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsach_rev__c</fullName>
        <label>Clause Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socustmsach_socustmsac__c</fullName>
        <label>MSA Clause</label>
        <referenceTo>rstk__socustmsac__c</referenceTo>
        <relationshipLabel>MSA Clause Change History</relationshipLabel>
        <relationshipName>socustmsachs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MSA Clause Change History</label>
    <nameField>
        <label>MSA Clause Change History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSA Clause Change History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>